src/components/footer/style.css
.main-footer {
  padding-top: 3rem;
  padding-bottom: 0;
  padding-left: 2rem;
  padding-right: 2rem;
  background: var(--gradient);
  color: var(--color-white);
}

.main-footer__upper {
  display: flex;
  justify-content: space-between;
  border-bottom: 2px solid var(--color-white);
}

.main-footer__row-2 {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 40%;
  margin-bottom: 3rem;
}

.main-footer__heading-sm {
  margin-bottom: 2rem;
  font-size: 24px;
  font-weight: 700;
  line-height: 30px;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.main-footer__short-desc {
  color: var(--color-white);
}

.main-footer__lower {
  padding: 2rem 0;
  font-size: 16px;
  line-height: 22px;
  text-align: center;
  color: var(--color-white);
}

.main-footer__lower a {
  display: inline-block;
  margin-left: 1rem;
  font-weight: bold;
  text-decoration: underline;
  color: var(--color-white);
}

.main-footer__lower a:hover {
  opacity: 0.7;
}

.main-footer__social {
  display: flex;
  column-gap: 1rem;
  align-items: center;
}

@media screen and (max-width: 912px) {
  .main-footer__upper {
    padding: 2rem 0;
  }

  .main-footer__row-1 {
    margin-top: 2rem;
    margin-bottom: 2rem;
  }

  .main-footer__row-2 {
    width: 100%;
    margin-bottom: 0;
  }

  .main-footer__lower {
    padding: 2rem 0;
  }

  .main-footer__short-desc {
    max-width: 413px;
  }
}

@media screen and (max-width: 768px) {
  .main-footer__upper {
    flex-direction: column;
    padding: 0rem 0;
  }

  .main-footer__list {
    justify-content: center;
  }

  .main-footer__row-2 {
    align-items: center;
  }

  .main-footer__heading-sm {
    display: none;
  }
}

@media screen and (max-width: 532px) {
  .main-footer__list {
    justify-content: flex-start;
  }

  .main-footer__row-2 {
    align-items: flex-start;
    gap: 1rem;
  }
}

